--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,12 @@
 }
 
 .brand-logo {
-  text-indent: -100000px;
   background-image: url('https://flexiana.com/app/themes/flexianacom/dist/assets/images/logo_flexiana_gold.svg');
   background-repeat: no-repeat;
   background-size: 100%;
+  width: 100px;
+  height: 30px;
+}
+.inactive-theme{
+  color:#c29a3d;
 }
